# ComfyUI-Whisker-Nodes

./: .gitignore  LICENSE  README.md  __init__.py  banner.png.txt  bg_remove.py  bg_remove_utils.py  offset_image.py  pyproject.toml  random_cube_grid.py  ratio_mask.py  requirements-dev.txt  requirements.txt  sprite_sheet.py
.github/workflows/: ci.yml  publish.yml
nodes/: __init__.py  bg_remove.py  offset_image.py  random_cube_grid.py  ratio_mask.py  sprite_sheet.py  strip_masks.py
tests/: __init__.py  test_imports.py  test_utils.py
utils/: bg_remove_utils.py
