[project]
name = "ComfyUI-Whisker-Nodes"
version = "1.0.1"
description = "Image and mask compositing utilities for ComfyUI: background removal, sprite sheets, strip masks, ratio masks, cube grids, and image offsetting"
authors = [
    {name = "nerdywhiskers"}
]
license = {text = "Apache-2.0"}
dependencies = [
    "transformers>=4.40",
    "numpy",
    "Pillow"
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/nerdywhiskers/ComfyUI-Whisker-Nodes"
Homepage = "https://github.com/nerdywhiskers/ComfyUI-Whisker-Nodes"

[tool.comfy]
publisher_id = "nerdywhiskers"
banner_url = "https://raw.githubusercontent.com/nerdywhiskers/ComfyUI-Whisker-Nodes/main/banner.png"
nodes = [
    "RandomCubeGrid",
    "OffsetImageNode",
    "BGRemoveCompose",
    "StripMaskGenerator",
    "RatioMask",
    "SpriteSheetGenerator"
]
